# rules_oci

examples/dockerfile/: BUILD.bazel
